dodane tehnologije i poveznice

--- a/Dokumentacija/Arhitektura.tex
+++ b/Dokumentacija/Arhitektura.tex
@@ -39,6 +39,7 @@
 			\item Sudjeluje-Na
 			\item Je-Osvojio
 			\item Klasa-Natjecanja
+			\item Sesija
 		\end{packed_item}
 		\subsection{Opis Tablica}
 		\noindent \textbf{Korisnik} \space \space Ovaj entitet sadržava sve važne informacije o korisniku aplikacije.
