--- a/Dokumentacija/Implementacija.tex
+++ b/Dokumentacija/Implementacija.tex
@@ -1,13 +1,10 @@
 \chapter{Implementacija i korisničko sučelje}
 		
-		
 		\section{Korištene tehnologije i alati}
 		
-			Komunikacija u timu realizirana je korištenjem aplikacija WhatsApp i Discord . Za izradu	UML dijagrama korišten je alat Astah Professional  , a kao sustav za upravljanje izvornim kodom Git. Udaljeni repozitorij projekta je dostupan na web platformi GitLab .
-			Kao razvojno okruženje korišten je Microsoft Visual Studio Code - integrirano je razvojno okruženje(IDE) tvrtke Microsoft. Prvenstveno se koristi za razvoj računalnih programa za operacijski sustav Windows, kao i za web-stranice, web-aplikacije, web-usluge i mobilne aplikacije. 
-			Aplikacija je napisana koristeći radni okvir Flask i web poslužitelj Gunicorn u jeziku Python 3.8. za izradu backenda. Za izradu frontenda su se koristili razvojni okvir React i jezik JavaScript. React, takoder
-			poznat kao React.js ili ReactJS, je biblioteka u JavaScriptu za izgradnju korisničkih sučelja. Održavana je od strane Mete. React se najčešće koristi kao osnova	u razvoju web ili mobilnih aplikacija. Složene aplikacije u Reactu obično zahtijevaju korištenje dodatnih biblioteka za interakciju s API-jem. Web poslužitelj Gunicorn nadograđuje radni okvir Flask kako bi mogao posluživati više zahtjeva u isto vrijeme. Naša cijela infrastruktura se nalazi u oblaku na privatnom VPS poslužitelju, poslužuje zahtjeve pomoću NGINX web poslužitelja na linux  ubuntu sustavu.
-			Mrežna potpora našoj arhitekturi je Cloudflare koja nam nudi usluge poput predmemorije (engl. cache) i DDoS zaštite. Bitan dio naše infrastrukture je baza podataka realizirana kroz Postgres DBMS.
+			Komunikacija u timu realizirana je korištenjem aplikacija \underline{WhatsApp}\footnote{https://www.whatsapp.com/} i \underline{Discord} \footnote{https://discord.com/}. Za izradu	UML dijagrama korišten je alat \underline{Astah UML} \footnote{https://astah.net/products/astah-uml/}  , a kao sustav za upravljanje izvornim kodom \underline{Git}\footnote{https://git-scm.com/}. Udaljeni repozitorij projekta je dostupan na web platformi \underline{GitLab} \footnote{https://gitlab.com/} .
+			Kao razvojno okruženje korišten je \underline{Visual Studio Code}\footnote{https://code.visualstudio.com/}. Prvenstveno se koristi kao uređivač teksta pri razvoju računalnih programa za operacijski sustav Windows, kao i za web-stranice, web-aplikacije, web-usluge i mobilne aplikacije. Aplikacija je napisana koristeći radni okvir \underline{Flask}\footnote{https://flask.palletsprojects.com/en/2.0.x/} i web poslužitelj \underline{Gunicorn}\footnote{https://gunicorn.org/} u jeziku \underline{Python 3.8}. \footnote{https://www.python.org/} za izradu backenda. Za izradu frontenda su se koristili razvojni okvir \underline{React}\footnote{https://reactjs.org/} i jezik \underline{JavaScript}\footnote{https://www.javascript.com/}. React, takoder poznat kao React.js ili ReactJS, je biblioteka u JavaScriptu za izgradnju korisničkih sučelja. React se najčešće koristi kao osnova	u razvoju web ili mobilnih aplikacija. Složene aplikacije u Reactu obično zahtijevaju korištenje dodatnih biblioteka za interakciju s API-jem. Web poslužitelj Gunicorn nadograđuje radni okvir Flask kako bi mogao posluživati više zahtjeva u isto vrijeme. Naša cijela infrastruktura se nalazi u oblaku na privatnom VPS poslužitelju, poslužuje zahtjeve pomoću \underline{NGINX}\footnote{https://nginx.org/en/} web poslužitelja na linux  ubuntu sustavu.
+			Mrežna potpora našoj arhitekturi je \underline{CloudFlare} \footnote{https://www.cloudflare.com/} koja nam nudi usluge poput predmemorije (engl. cache) i DDoS zaštite. Bitan dio naše infrastrukture je baza podataka realizirana kroz \underline{PostgreSQL RDBMS}\footnote{https://www.postgresql.org/}.
 			
 			
 			\eject 
