--- a/Dokumentacija/Dnevnik_promjena_dokumentacije.tex
+++ b/Dokumentacija/Dnevnik_promjena_dokumentacije.tex
@@ -34,6 +34,7 @@
 			1.5 & Popravljena dokumentacija baze & Marko Damjanić & 14.1.2022. \\[3pt] \hline
 			1.6 & Dodan Zaključak i budući rad & Marko Damjanić & 14.1.2022. \\[3pt] \hline
 			1.7 & Dodane korištene tehnologije i alati & Marko Damjanić & 14.1.2022. \\[3pt] \hline
+			1.8 & Dodan dijagram razmještaja & Marko Damjanić & 14.1.2022. \\[3pt] \hline
 			
 			
 		\end{longtblr}
