--- a/Dokumentacija/Dnevnik_promjena_dokumentacije.tex
+++ b/Dokumentacija/Dnevnik_promjena_dokumentacije.tex
@@ -36,6 +36,7 @@
 			1.7 & Dodane korištene tehnologije i alati & Marko Damjanić & 14.1.2022. \\[3pt] \hline
 			1.8 & Dodan dijagram razmještaja & Marko Damjanić & 14.1.2022. \\[3pt] \hline
 			1.8.1 & Dodano ispitivanje sustava & Marko Damjanić & 14.1.2022. \\[3pt] \hline
+			2.0 & Dodano puštanje u pogon & Marko Damjanić & 14.1.2022. \\[3pt] \hline
 			
 			
 		\end{longtblr}
