--- a/Dokumentacija/Dodatak.tex
+++ b/Dokumentacija/Dodatak.tex
@@ -158,8 +158,17 @@
 		\eject
 		\section*{Dijagrami pregleda promjena}
 		
-		\textbf{\textit{dio 2. revizije}}\\
+		\begin{figure}[H]
+			\includegraphics[width=\textwidth]{slike/PrikazAktivnostiNaRepozitorijuPrviDio.png} %veličina u odnosu na širinu linije
+			\caption{Prikaz Aktivnosti Na Repozitoriju Prvi Dio}
+			\label{fig:PrikazAktivnostiNaRepozitorijuPrviDio} %label mora biti drugaciji za svaku sliku
+		\end{figure}
 		
-		\textit{Prenijeti dijagram pregleda promjena nad datotekama projekta. Potrebno je na kraju projekta generirane grafove s gitlaba prenijeti u ovo poglavlje dokumentacije. Dijagrami za vlastiti projekt se mogu preuzeti s gitlab.com stranice, u izborniku Repository, pritiskom na stavku Contributors.}
+		\begin{figure}[H]
+			\includegraphics[width=\textwidth]{slike/PrikazAktivnostiNaRepozitorijuDrugiDio.png} %veličina u odnosu na širinu linije
+			\caption{Prikaz Aktivnosti Na Repozitoriju Drugi Dio}
+			\label{fig:PrikazAktivnostiNaRepozitorijuDrugiDio} %label mora biti drugaciji za svaku sliku
+		\end{figure}
+	
 		
 	
