Updejtani sati rada

--- a/Dokumentacija/Dodatak.tex
+++ b/Dokumentacija/Dodatak.tex
@@ -120,37 +120,40 @@
 					rowhead = 1,
 				} 
 				\multicolumn{1}{c|}{} & \multicolumn{1}{c|}{\rotatebox{90}{\textbf{Marko Damjanić}}} & \multicolumn{1}{c|}{\rotatebox{90}{\textbf{Ivan Jeržabek}}} &	\multicolumn{1}{c|}{\rotatebox{90}{\textbf{Roko Mihalić}}} & \multicolumn{1}{c|}{\rotatebox{90}{\textbf{Fran Tomljenović}}} &	\multicolumn{1}{c|}{\rotatebox{90}{\textbf{Fran Jelavić}}} & \multicolumn{1}{c|}{\rotatebox{90}{\textbf{Antonio Griparić}}} &	\multicolumn{1}{c|}{\rotatebox{90}{\textbf{Luka Maros}}} \\  
-				Upravljanje projektom 		& 25  &  &  &  &  &  & \\ 
+				Upravljanje projektom 		& 35  &  &  &  &  &  & \\ 
 				Opis projektnog zadatka 	& 6  &  &  &  &  &  & \\ 
 				
 				Funkcionalni zahtjevi       &  &  &  &  & 5 &  &  \\ 
 				Opis pojedinih obrazaca 	&  &  &  &  &  & 10 & 10 \\ 
 				Dijagram obrazaca 			&  &  &  &  &  & 4 &  \\ 
 				Sekvencijski dijagrami 		&  &  &  &  &  &  & 4 \\ 
-				Opis ostalih zahtjeva 		& 1 &  &  &  &  &  &  \\ 
+				Opis ostalih zahtjeva 		& 2 &  &  &  &  &  &  \\ 
 
 				Arhitektura i dizajn sustava	 &  &  &  &  & 5 &  &  \\ 
 				Baza podataka				& 15 &  & 5 & 5 &  &  &   \\ 
 				Dijagram razreda 			&  &  & 3 &  &  &  &   \\ 
 				Dijagram stanja				& 3 &  &  &  &  &  &  \\ 
 				Dijagram aktivnosti 		& 2 &  &  &  &  &  &  \\ 
-				Dijagram komponenti			&  &  &  &  &  &  &  \\ 
+				Dijagram komponenti			& 2 & 1 & 1 &  &  &  &  \\ 
 				Korištene tehnologije i alati 		& 1 & 1 & 1 &  &  &  &  \\ 
-				Ispitivanje programskog rješenja & 1 &  & 8 &  &  &  &  \\ 
+				Ispitivanje programskog rješenja & 3 &  & 8 &  &  &  &  \\ 
 				Dijagram razmještaja			& 1 &  &  &  &  &  &  \\ 
 				Upute za puštanje u pogon 		& 2 & 2 & 2 &  &  &  &  \\  
 				Dnevnik sastajanja 			& 2 &  &  &  &  &  &  \\ 
 				Zaključak i budući rad 		& 1 &  &  &  &  &  &  \\  
 				Popis literature 			& 1 &  &  &  &  &  &  \\  
 				Izrada početne stranice		&  &  &  &  & 15  &  &  \\ 
-				Izrada stranice s zadacima	&  & 2 &  &  &  & 15 &  \\ 
-				Izrada stranice odabranog zadatka &  & 2 &  &  &  & 15 &  \\  
-			 	Izrada stranice natjecanja		&  & 50 &  &  &  &  &  \\ 
-			 	Izrada stranice korisničkih profila	&  & 3 &  &  &  &  & 35 \\ 
-			 	Izrada stranice članova &  & 2 &  &  & 15 &  &  \\ 
+				Izrada stranice s zadacima	&  & 10 &  &  &  & 15 &  \\ 
+				Izrada stranice odabranog zadatka &  & 15 &  &  &  & 25 &  \\  
+			 	Izrada stranice natjecanja		&  & 55 &  &  &  &  &  \\ 
+			 	Izrada stranice korisničkih profila	&  & 4 &  &  &  &  & 35 \\ 
+			 	Izrada stranice članova &  & 2 & 1 &  & 15 &  &  \\ 
 			 	Izrada baze podataka & 20 &  &  &  &  &  &  \\ 
-				Back end		&  &  & 120 & 100 &  &  &  \\  
+			 	Izrada vizualnog identiteta &  &  &  &  & 6 &  &  \\ 
+				Back end		&  &  & 130 & 110 &  &  &  \\  
+				Izvršavanje zadataka &  &  &  & 20 &  &  &  \\  
 				Puštanje u pogon &  & 35 &  & 5 &  &  &\\ 
+				
 				 							
 			\end{longtblr}
 					
